projects/vb6parse/snapshots/syntax/library/statements/unload/unload_at_module_level.snap
---
source: projects/vb6parse/src/syntax/library/statements/system_interaction/unload.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: UnloadStatement
      children:
        - kind: UnloadKeyword
          text: Unload
        - kind: Whitespace
          text: " "
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: frmMain
    - kind: Newline
      text: "\n"
