projects/vb6parse/snapshots/syntax/library/statements/unload/unload_before_end.snap
---
source: projects/vb6parse/src/syntax/library/statements/system_interaction/unload.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: PrivateKeyword
          text: Private
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: cmdExit_Click
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: UnloadStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: UnloadKeyword
                  text: Unload
                - kind: Whitespace
                  text: " "
                - kind: IdentifierExpression
                  children:
                    - kind: MeKeyword
                      text: Me
            - kind: Newline
              text: "\n"
            - kind: Whitespace
              text: "    "
            - kind: EndStatement
              children:
                - kind: EndKeyword
                  text: End
            - kind: Newline
              text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
